--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="footer-header">social media presence</div>
     <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-            <a class="link" href="https://github.com/ajayprime11">
+            <a class="link" href="https://github.com/iprime11">
                 github
             </a>
         </li>
         <li class="list-item-inline">
-            <a class="link" href="https://twitter.com/optims_prime_11">
+            <a class="link" href="https://twitter.com/itachiuchihasol">
                 twitter
             </a>
         </li>
